--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,13 +14,13 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">小D课堂</a>
+      <a class="navbar-brand" href="#">food_mall</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">首页 <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">博客</a></li>        
+        <li><a href="#">详情页</a></li>
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
@@ -30,7 +30,7 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#" id='login'>微信一键登录</a></li>
-        <li><img id="head_img" src="https://xd-video-pc-img.oss-cn-beijing.aliyuncs.com/upload/video/video_cover.png" alt="..." style="width: 50px;height: 50px" class="img-circle"></li>
+        <li><img id="head_img" src='big.jpeg' alt="..." style="width: 50px;height: 50px" class="img-circle"></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
